# forge

./: .editorconfig  .gitignore  .goreleaser.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.en.md  README.md  SECURITY.md  clippy.toml  go.mod  go.sum  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  ci.yml  release.yml
cmd/forge/: main.go
docs/: architecture.md
internal/app/: app.go  config_cmd.go  root_cmd.go  root_select.go  version.go
internal/config/: config.go  config_test.go
internal/pathutil/: pathutil.go  pathutil_test.go
internal/runner/: exec_unix.go  exec_windows.go  runner.go  runner_test.go
internal/scan/: scan.go  scan_test.go
internal/ui/: banner.go  fuzzy.go  mode.go  root.go  styles.go  workspace.go
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: config.rs  lib.rs  main.rs  pathutil.rs  runner.rs  scan.rs
src/app/: mod.rs
src/ui/: mod.rs
